build: bump EDC to 0.15.0